changed colour scheme

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <img src="img/checklist_add_task.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app add new task page">
         <img src="img/checklist_reset_password.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app reset password page">
         <div class="links">
-          <a class="btn btn-dark mt-3 mr-2 mb-4 ml-1" target="_blank" href="https://github.com/annatruong/checklist_app" role="button">View On GitHub</a>
-          <a class="btn btn-dark mt-3 mr-2 mb-4 ml-1" target="_blank" href="https://checklist-app01.herokuapp.com/" role="button">View App</a>
+          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://github.com/annatruong/checklist_app" role="button">View On GitHub</a>
+          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://checklist-app01.herokuapp.com/" role="button">View App</a>
         </div>
       </section>
       <section class="project mt-3 pt-4 pb-4 border-top">
@@ -58,7 +58,7 @@
         <img src="img/snake_gameplay.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="Snake gameplay">
         <img src="img/snake_end_screen.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="Snake game over screen">
         <div class="links">
-          <a class="btn btn-dark mt-3 mr-2 mb-4 ml-1" target="_blank" href="https://github.com/annatruong/pygame-snake" role="button">View On GitHub</a>
+          <a class="btn btn-dark mt-3 mr-2 mb-3 ml-1" target="_blank" href="https://github.com/annatruong/pygame-snake" role="button">View On GitHub</a>
         </div>
       </section>
     </main>
