--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Anna Truong</title>
 </head>
 <body>
-  <div id="modal01" class="modal" onclick="this.style.display='none'">
+  <div id="modal-image" class="modal" onclick="this.style.display='none'">
       <span class="close">&times;</span>
-      <img id="img01" class="modal-content">
+      <img id="image" class="modal-content">
   </div>
   <nav class="navbar navbar-expand-lg sticky-top">
       <div class="navbar-brand">
@@ -34,16 +34,29 @@
     <main class="container">
       <h1 class="mt-4">Projects</h1>
       <section class="project mt-3 pt-4 pb-4 border-top">
+        <h2>Photography Website</h2><span> - HTML, CSS, Javascript, Bootstrap</span>
+        <p class="mt-3">The photography website was created using a combination of CSS and Bootstrap for styling and Javascript to control the pop-up images. 
+          The project enabled me to experiment with some of the popular features of web design e.g. carousel. 
+          It also taught me about responsive websites and how different usage of images can affect the load time.</p>
+        <div class="screenshot">
+          <img src="img/photography_website.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="AT Photography website">
+        </div>
+        <div class="links">
+          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://github.com/annatruong/atphotography/" role="button">View On GitHub</a>
+          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://annatruong.github.io/atphotography/" role="button">View Website</a>
+        </div>
+      </section>
+      <section class="project mt-3 pt-4 pb-4 border-top">
         <h2>Checklist App</h2><span> - Python, Flask, HTML, Bootstrap</span>
         <p class="mt-3">The idea for this project came about because I wanted to acquire some knowledge of how back-end programming worked and Flask seemed like a good place to start. 
-          Again, this concept was simple enough for a beginner to understand some of the main principles of back-end web development e.g. how to store and retrieve information from databases. 
-          This project also introduced me to resources such as Bootstrap which made creating a clean and responsive user interface easy to allow more time to focus on the functionality of the app.</p>
+          The package was simple enough for someone new to the topic to understand some of the main principles of back-end web development e.g. how to store and retrieve information from databases. 
+          This project also introduced me to resources such as Bootstrap which made creating a clean and responsive user interface easy, allowing more focus on functionalities of the app.</p>
         <p>In order to use the app, users must register via the sign-up form. They can then login to add tasks with a description and due date. 
           They have options to edit the tasks and delete them after completion. There is also a function which allows users to reset their password.</p>
-        <img src="img/checklist_login.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app login page">
-        <img src="img/checklist_tasks.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app tasks page">
-        <img src="img/checklist_add_task.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app add new task page">
-        <img src="img/checklist_reset_password.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app reset password page">
+        <div class="screenshot">
+          <img src="img/checklist_login.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app login page">
+          <img src="img/checklist_tasks.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="checklist app tasks page">
+        </div>
         <div class="links">
           <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://github.com/annatruong/checklist_app" role="button">View On GitHub</a>
           <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://checklist-app01.herokuapp.com/" role="button">View App</a>
@@ -51,29 +64,29 @@
       </section>
       <section class="project mt-3 pt-4 pb-4 border-top">
         <h2>Snake Game</h2><span> - Python, Pygame</span>
-        <p class="mt-3">The Snake game was my first coding project. I decided to create my own version of the game as it’s always nice to start with something fun when you are learning how to code. 
+        <p class="mt-3">The Snake game was my first hobby project. I decided to create my own version of the game as it’s always nice to start with something fun when you are learning a new language. 
           The project was simple enough for a beginner, but also allowed me to practice what I have learnt from completing a Python online course. The game was developed using the Pygame modules, 
-          using simple shapes that were drawn on to a grid and initialising keyboard controls to navigate the snake.</p>
-        <img src="img/snake_start_screen.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="Snake game start screen">
-        <img src="img/snake_gameplay.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="Snake gameplay">
-        <img src="img/snake_end_screen.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="Snake game over screen">
+          with simple shapes drawn on to a grid and initialising keyboard controls to navigate the game.</p>
+        <div class="screenshot">
+          <img src="img/snake_gameplay.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="Snake gameplay">
+        </div>
         <div class="links">
           <a class="btn btn-dark mt-3 mr-2 mb-3 ml-1" target="_blank" href="https://github.com/annatruong/pygame-snake" role="button">View On GitHub</a>
         </div>
       </section>
     </main>
     <footer>
-      <section id="about">
+      <div id="about">
         <h1>About</h1>
-        <p>Hello! My name is Anna and I currently work as an Account Manager at a digital marketing agency. Through the process of finding ways to work efficiently within my role, 
-          I learnt how to automate some of the longer tasks by teaching myself some basic Javascript to be applied to Google App Scripts. I found my love for code again at this point 
-          and went on to learn more in my own time, starting with Python, and revisiting HTML and CSS.</p>
+        <p>Hello! My name is Anna and I currently work as an Account Manager at a digital marketing agency. I made a return to code when I was trying to improve internal processes at work. 
+          I started coding using Google Apps Script to automate the boring and repetitive tasks and eventually grew more interested in tech and started to learn more in my own time. 
+          By now I have self-taught myself Python, HTML, CSS and Javascript.</p>
         <p> Outside of work and coding, you can find me at various cinemas and theatres, attending volunteering events or socialising with other bookworms at the London Silent Book Club.</p>
-        </section>
-      <aside id="contact">
+        </div>
+      <div id="contact">
         <a class="mr-3" target="_blank" href="https://github.com/annatruong"><img src="img/github_logo.png" width="40" height="40"></a>
         <a target="_blank" href="https://uk.linkedin.com/in/anna-truong-38143227"><img src="img/linkedin_logo.png" width="40" height="40"></a>
-      </aside>
+      </div>
     </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
