--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="project mt-3 pt-4 pb-4 border-top">
         <h2>Snake Game</h2><span> - Python, Pygame</span>
         <p class="mt-3">The Snake game was my first hobby project. I decided to create my own version of the game as it’s always nice to start with something fun when you are learning a new language. 
-          The project was simple enough for a beginner, but also allowed me to practice what I have learnt from completing a Python online course. The game was developed using the Pygame modules, 
+          The project was simple enough for a beginner, but also allowed me to practice what I have learnt from completing a Python online course. The game was developed using the Pygame module, 
           with simple shapes drawn on to a grid and initialising keyboard controls to navigate the game.</p>
         <div class="screenshot">
           <img src="img/snake_gameplay.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="Snake gameplay">
