--- a/index.html
+++ b/index.html
@@ -1,96 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" id="top">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./main.css">
-    <title>Anna Truong</title>
-</head>
-<body>
-  <div id="modal-image" class="modal" onclick="this.style.display='none'">
-      <span class="close">&times;</span>
-      <img id="image" class="modal-content">
-  </div>
-  <nav class="navbar navbar-expand-lg sticky-top">
-      <div class="navbar-brand">
-        <img src="img/logo.png" width="40" height="40" class="d-inline-block align-top" alt="logo">
-        <span class="navbar-brand mb-0 ml-2 h1 text-light">Anna Truong</span>
-      </div>
-      <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#about">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#top">PROJECTS</a>
-            </li>
-          </ul>
-      </div>
-    </nav>
-    <main class="container">
-      <h1 class="mt-4">Projects</h1>
-      <section class="project mt-3 pt-4 pb-4 border-top">
-        <h2>Photography Website</h2><span> - HTML, CSS, Javascript, Bootstrap</span>
-        <p class="mt-3">The photography website was created using a combination of CSS and Bootstrap for styling and Javascript to control the pop-up images. 
-          The project enabled me to experiment with some of the popular features of web design e.g. carousel. 
-          It also taught me about responsive websites and how different usage of images can affect the load time.</p>
-        <div class="screenshot">
-          <img src="img/photography_website.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="AT Photography website">
+<html>
+    <head>
+        <title>Anna Truong</title>
+        <link rel="icon" type="image/x-icon" href="./img/logo.png">
+        <link href="./style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="main-container">
+            <header>
+                <img id="logo" src="./img/logo.png" alt="logo">
+                <h1>ANNA TRUONG</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section id="intro">
+                <div id="about">
+                    <p>
+                        Hello!  My name is Anna and I currently work as a Back-End and DevOps Engineer at a tech start-up.
+                    </p>
+                    <p>
+                        My coding journey began when I was working as an Account Manager at a marketing agency a few years back.
+                        Whilst finding ways to improve productivity, I ventured into automating mundane tasks, inadvertently igniting my passion for technology.
+                        Since joining the start-up, I've been focused on building resilient data warehouses and developing business tailored reporting apps.
+                        Additionally, I oversee the deployment of these apps on Google Cloud Platform (GCP), prioritising the establishment of robust CI/CD pipelines to streamline our development workflows.
+                    </p>
+                    <a href="https://github.com/annatruong" target="_blank"><img src="./img/github_logo.png" alt="github logo"></a>
+                    <a href="https://www.linkedin.com/in/anna-truong-38143227" target="_blank"><img src="./img/linkedin_logo.png" alt="linkedin logo"></a>
+                </div>
+                <div id="skills">
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>Node.js</li>
+                        <li>TypeScript</li>
+                        <li>HTML & CSS</li>
+                        <li>Google Cloud Platform</li>
+                    </ul>
+                </div>
+            </section>
+            <section id='projects'>
+                <h1>Projects</h1>
+                <div class="project-item">
+                <h2>Reading Tracker</h2>
+                <p>The Frontend Monitor recipe page project was my first project on the journey to learning front-end development. This project allowed me to apply the HTML and CSS knowledge that I had acquired and practice using media queries to create a responsive layout.</p>
+                <ul>
+                    <li> <a href="https://github.com/annatruong" target="_blank"><img src="./img/github_logo.png" alt="github logo"></a></li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+                <img class="project-screenshot" src="./img/recipe-website-screenshot.png" alt="recipe website screenshot">
+                </div>
+            </section>
+            <footer>
+                <p>Anna Truong &copy; 2024</p>
+            </footer>
         </div>
-        <div class="links">
-          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://github.com/annatruong/atphotography/" role="button">View On GitHub</a>
-          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://annatruong.github.io/atphotography/" role="button">View Website</a>
-        </div>
-      </section>
-      <section class="project mt-3 pt-4 pb-4 border-top">
-        <h2>Checklist App</h2><span> - Python, Flask, HTML, Bootstrap</span>
-        <p class="mt-3">The idea for this project came about because I wanted to acquire some knowledge of how back-end programming worked and Flask seemed like a good place to start. 
-          The package was simple enough for someone new to the topic to understand some of the main principles of back-end web development e.g. how to store and retrieve information from databases. 
-          This project also introduced me to resources such as Bootstrap which made creating a clean and responsive user interface easy, allowing more focus on functionalities of the app.</p>
-        <p>In order to use the app, users must register via the sign-up form. They can then login to add tasks with a description and due date. 
-          They have options to edit the tasks and delete them after completion. There is also a function which allows users to reset their password.</p>
-        <div class="screenshot">
-          <img src="img/checklist_login.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mr-2 mb-2" onclick="onClick(this)" alt="checklist app login page">
-          <img src="img/checklist_tasks.png" width="450" height="400" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="checklist app tasks page">
-        </div>
-        <div class="links">
-          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://github.com/annatruong/checklist_app" role="button">View On GitHub</a>
-          <a class="btn btn-dark mt-3 mr-2 ml-1" target="_blank" href="https://checklist-app01.herokuapp.com/" role="button">View App</a>
-        </div>
-      </section>
-      <section class="project mt-3 pt-4 pb-4 border-top">
-        <h2>Snake Game</h2><span> - Python, Pygame</span>
-        <p class="mt-3">The Snake game was my first hobby project. I decided to create my own version of the game as it’s always nice to start with something fun when you are learning a new language. 
-          The project was simple enough for a beginner, but also allowed me to practice what I have learnt from completing a Python online course. The game was developed using the Pygame module, 
-          with simple shapes drawn on to a grid and initialising keyboard controls to navigate the game.</p>
-        <div class="screenshot">
-          <img src="img/snake_gameplay.png" width="300" height="300" class="img-responsive img-thumbnail mt-2 mb-2" onclick="onClick(this)" alt="Snake gameplay">
-        </div>
-        <div class="links">
-          <a class="btn btn-dark mt-3 mr-2 mb-3 ml-1" target="_blank" href="https://github.com/annatruong/pygame-snake" role="button">View On GitHub</a>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div id="about">
-        <h1>About</h1>
-        <p>Hello! My name is Anna and I currently work as an Account Manager at a digital marketing agency. I made a return to code when I was trying to improve internal processes at work. 
-          I started coding using Google Apps Script to automate the boring and repetitive tasks and eventually grew more interested in tech and started to learn more in my own time. 
-          By now I have self-taught myself Python, HTML, CSS and Javascript.</p>
-        <p> Outside of work and coding, you can find me at various cinemas and theatres, attending volunteering events or socialising with other bookworms at the London Silent Book Club.</p>
-        </div>
-      <div id="contact">
-        <a class="mr-3" target="_blank" href="https://github.com/annatruong"><img src="img/github_logo.png" width="40" height="40"></a>
-        <a target="_blank" href="https://uk.linkedin.com/in/anna-truong-38143227"><img src="img/linkedin_logo.png" width="40" height="40"></a>
-      </div>
-    </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
-</body>
+    </body>
 </html>
