--- a/index.html
+++ b/index.html
@@ -44,14 +44,18 @@
             <section id='projects'>
                 <h1>Projects</h1>
                 <div class="project-item">
-                <h2>Reading Tracker</h2>
-                <p>The Frontend Monitor recipe page project was my first project on the journey to learning front-end development. This project allowed me to apply the HTML and CSS knowledge that I had acquired and practice using media queries to create a responsive layout.</p>
-                <ul>
-                    <li> <a href="https://github.com/annatruong" target="_blank"><img src="./img/github_logo.png" alt="github logo"></a></li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                </ul>
-                <img class="project-screenshot" src="./img/recipe-website-screenshot.png" alt="recipe website screenshot">
+                <div class="project-description">
+                    <h2>Reading Tracker</h2>
+                    <p>The Frontend Monitor recipe page project was my first project on the journey to learning front-end development. This project allowed me to apply the HTML and CSS knowledge that I had acquired and practice using media queries to create a responsive layout.</p>
+                    <ul>
+                        <li><a href="https://github.com/annatruong/recipe-website" target="_blank"><img src="./img/github_logo.png" alt="github logo"></a></li>
+                        <li class="skills-highlight">HTML</li>
+                        <li class="skills-highlight">CSS</li>
+                    </ul>
+                </div>
+                <div class="project-image">
+                    <img class="project-screenshot" src="./img/recipe-website-screenshot.png" alt="recipe website screenshot">
+                </div>
                 </div>
             </section>
             <footer>
