updated project title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1>Projects</h1>
                 <div class="project-item">
                 <div class="project-description">
-                    <h2>Reading Tracker</h2>
+                    <h2>Recipe Page</h2>
                     <p>The Frontend Monitor recipe page project was my first project on the journey to learning front-end development. This project allowed me to apply the HTML and CSS knowledge that I had acquired and practice using media queries to create a responsive layout.</p>
                     <ul>
                         <li><a href="https://github.com/annatruong/recipe-website" target="_blank"><img src="./img/github_logo.png" alt="github logo"></a></li>
